--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
+    "@mui/x-data-grid": "^5.15.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
